# firewatch

./: LICENSE  README.md  pyproject.toml
src/pyfirewatch/: __init__.py  __main__.py  pyfirewatch.py
