[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyfirewatch*"]

[project]
name = "pyfirewatch"
version = "0.0.1"
authors = [
  { name="Léandre Blanchard", email="leandre.bla@gmail.com" },
]
description = "A Python inotify daemon to run commands based on filesystem events"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',
]
dependencies = [
  "watchfiles"
]

[project.urls]
"Homepage" = "https://github.com/LeandreBl/pyfirewatch"
"Bug Tracker" = "https://github.com/LeandreBl/pyfirewatch/issues"
